# GilSDL

./: CMakeLists.txt  FunnyFace.cpp  FunnyFace.h  README.md  inputTestObject.cpp  inputTestObject.h  main.cpp
src/: Object.cpp  Object.h  engine.cpp  engine.h  graphics.cpp  input.cpp  input.h
src/header/: engine.h  graphics.h
src/source/: engine.cpp  graphics.cpp
